# shellguardian

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: agent-protocol.md  policy.md
prompts/: claude-code-system-prompt.txt  codex-system-prompt.txt
src/shell_guardian/: __init__.py  audit.py  cli.py  delete_preview.py  exceptions.py  policy.py  result.py  service.py
tests/: conftest.py  test_service.py
